[package]
name = "ethers-encryption"
version = "1.0.0"
edition = "2021"
rust-version = "1.62"
authors = ["Mike Antonuk <mike@swisstronik.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ethers"
repository = "https://github.com/SigmaGmbH/ethers-rs"
homepage = "https://docs.rs/ethers"
description = "Complete Ethereum library and wallet implementation in Rust."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
deoxys = "0.1.0"
rand = "0.8.5"
sha2 = "0.10.7"
hmac = "0.12.1"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }